--- a/sitioWeb/templates/modelo_reporte.html
+++ b/sitioWeb/templates/modelo_reporte.html
@@ -82,7 +82,7 @@ th {
 </head>
 <body>
     <header>
-        <img class="logo" src="{% static imagenes/baner.jpg %}">
+        <img class="logo" src="{% static 'imagenes/baner.jpg' %}">
         <br>
         <h1>REPORTE DE ASISTENCIAS</h1>
         <table class="encabezado">
