--- a/sitioWeb/templates/modelo_reporte.html
+++ b/sitioWeb/templates/modelo_reporte.html
@@ -65,7 +65,8 @@ th {
 .encabezado td{
     border: 1px solid #fff;
 }
-.encabezado .valor{
+.encabezado .valor,
+.encabezado .fecha_valor{
     text-align: left;
 }
 .encabezado .fecha{
