--- a/sitioWeb/templates/modelo_reporte.html
+++ b/sitioWeb/templates/modelo_reporte.html
@@ -66,7 +66,7 @@ th {
     border: 1px solid #fff;
 }
 .encabezado .valor,
-.encabezado .fecha_valor{
+.encabezado .fecha-valor{
     text-align: left;
 }
 .encabezado .fecha{
