Update resumen_reporte.html img

--- a/sitioWeb/templates/resumen_reporte.html
+++ b/sitioWeb/templates/resumen_reporte.html
@@ -95,7 +95,7 @@ th {
 </head>
 <body>
     <header>
-        <img class="logo" src="sitioWeb\static\imagenes\baner.jpg">
+        <img class="logo" src="/opt/render/project/src/staticfiles/imagenes/baner.jpg">
         <br>
         <h1>REPORTE DE ASISTENCIAS</h1>
         <h1>CUADRO DE RESUMEN</h1>
